--- a/exemple.env
+++ b/exemple.env
@@ -1,3 +1,5 @@
 export REACT_APP_GATEWAY_PORT=8090
-export REACT_APP_OCR_ENGINE_URI=http://ocr-engine
-export REACT_APP_OCR_ENGINE_PORT=8010
+export OCR_ENGINE_PORT=8010
+export OCR_ENGINE_URI=http://ocr-engine:$OCR_ENGINE_PORT
+export SAVE_IMG_PORT=8020
+export SAVE_IMG_URI=http://save-img:$SAVE_IMG_PORT
