--- a/vercel.json
+++ b/vercel.json
@@ -31,6 +31,11 @@
             "src": "/api/login",
             "methods": ["POST"],
             "dest": "/api/login.go"
+        },
+        {
+            "src": "api/logout",
+            "methods": ["POST"],
+            "dest": "/api/logout.go"
         }
     ]
 }
