--- a/vercel.json
+++ b/vercel.json
@@ -41,6 +41,11 @@
             "src": "/api/token",
             "methods": ["GET","OPTIONS"],
             "dest": "/api/token.go"
+        },
+        {
+            "src": "/api/signup",
+            "methods": ["POST","OPTIONS"],
+            "dest": "/api/signup.go"
         }
     ]
 }
