--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+    "headers": [
+        {
+          "source": "/api/(.*)",
+          "headers": [
+            { "key": "Access-Control-Allow-Credentials", "value": "true" },
+            { "key": "Access-Control-Allow-Origin", "value": "https://cloudocr.vercel.app" },
+            { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
+            { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, Authorization" }
+          ]
+        }
+    ],
     "version": 2,
     "builds": [
         {
