--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,5 @@
 {
     "version": 2,
-    "headers": [
-        {
-          "source": "/api/(.*)",
-          "headers": [
-            { "key": "Access-Control-Allow-Credentials", "value": "true" },
-            { "key": "Access-Control-Allow-Origin", "value": "https://cloudocr.vercel.app" },
-            { "key": "Access-Control-Allow-Methods", "value": "GET,POST,PUT,DELETE,OPTIONS" },
-            { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, Authorization" }
-          ]
-        }
-    ],
     "builds": [
         {
             "src": "/api/**/*.go",
@@ -55,7 +44,7 @@
         },
         {
             "src": "/api/signup",
-            "methods": ["POST","OPTIONS"],
+            "methods": ["POST"],
             "dest": "/api/signup.go"
         }
     ]
